--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p onclick=""> Hello World!</p>
+    <h1>Hello World!</h1>
+    <h2>Hello!</h2>
 
     <!-- <script>
         alert(1);    
