--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>Hello!</h2>
+    <h3>Hello friend!</h3>
 
     <!-- <script>
         alert(1);    
